--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,4 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p To see data from a specific country, go to /country/countryname. The country name is case-sensitive for the time being.
