--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,4 +4,11 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    header 
+      nav
+        ul
+          li
+            a(href='/') Home
+          li
+            a(href='/country') Insert Country
+  block content
